--- a/morinhw5.Rmd
+++ b/morinhw5.Rmd
@@ -13,10 +13,14 @@ output: pdf_document
 library(knitr)
 library(readr)
 library(MASS)
+library(leaps)
 library(dplyr)
 library(stargazer)
+library(caret)
 
 ```
+
+# Question 1:
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 
@@ -32,11 +36,13 @@ iod.clean = iod.clean %>%
 
 ### Filter out ids
 iod.clean = iod.clean %>%
-  select(-X1, -ID, -"..2", -"..2_1")
+  select(-X1, -ID, -"..2", -"..2_1", -WEIGHT, -HEIGHT, -c.cys, -drds, -mayodonor, -rass1, -CSG, -gronigendonor, - ccpdonor, - c.scr)
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, cache = TRUE}
 
 # ### Forward steps
 # forward = regsubsets(GFR~., data = iod.clean, nvmax=26, method="forward")
@@ -49,11 +55,12 @@ set.seed(1)
 ### Forward and backward step regression
 full = lm(GFR ~ ., iod.clean)
 base = lm(GFR ~ 1, iod.clean)
-forward = stepAIC(full, scope = list(upper=full,lower=base), direction = "both", trace = FALSE)
-summary.forward = summary(forward)
-rsquared.forward = summary.forward$r.squared
+fulltest = stepAIC(full, scope = list(upper=full,lower=base), direction = "both", trace = FALSE)
+summary.fulltest = summary(fulltest)
+rsquared.fulltest = summary.fulltest$r.squared
 
 
+### Bootstrap 1000 samples and get rsquares
 set.seed(1)
 nsims = 1000
 
@@ -76,10 +83,69 @@ for (i in 1:nsims) {
 }
 
 
+### Calculate average optimism
+optimism = r2boot.train - r2boot.test
+ave.optimism = mean(optimism)
+
+### Calculate Estimated Test r2
+est.test.r2 = rsquared.fulltest - ave.optimism 
+
+
+
 ```
 
-```{r, echo = FALSE, results = 'asis'}
 
-stargazer(forward, backward)
+# Question 2:
+
+
+## Step CV:
+
+```{r, echo = FALSE, warning = TRUE, message = FALSE}
+
+predict.regsubsets=function(object,newdata,id,...){
+  form=as.formula(object$call[[2]])
+  mat=model.matrix(form,newdata)
+  coefi=coef(object,id=id)
+  xvars=names(coefi)
+  mat[,xvars]%*%coefi
+}
+
+### Crossvalidate number of variables for step
+
+set.seed(11)
+
+folds = 10
+
+test = createFolds(iod.clean$GFR, k = folds)
+
+cv.errors = matrix(NA, nrow = folds, ncol = ncol(iod.clean) - 2)
+
+for (i in 1:folds) {
+  
+  training = iod.clean[-test[[i]], ]
+  testing = iod.clean[test[[i]], ]
+  best.model = regsubsets(GFR ~ .,
+                          data = training,
+                          nvmax = ncol(iod.clean) - 2)
+  
+  for (j in 1:(ncol(iod.clean)-2)) {
+    
+    preds = predict.regsubsets(best.model, newdata = testing, id = j)
+    MSE = mean((testing$GFR - preds)^2)
+    cv.errors[i, j] = MSE
+    
+    
+    
+  }
+  
+  
+}
+
+
+mean.cv.errors = apply(cv.errors, 2, mean)
+which.min(mean.cv.errors)
+plot(mean.cv.errors,type='b')
 
 ```
+
+## Ridge 
